lnet/klnds/kfilnd/kfilnd.h
@@ -105,6 +105,8 @@
 #define CFS_KFI_FAIL_WAIT_SEND_COMP2 0xF116
 #define CFS_KFI_FAIL_WAIT_SEND_COMP3 0xF117
 #define CFS_KFI_REPLAY_IDLE_EVENT 0xF118
+#define CFS_KFI_REPLAY_RX_HELLO_REQ 0xF119
+#define CFS_KFI_FAIL_MSG_TYPE_EAGAIN 0xF11A
 
 /* Maximum number of transaction keys supported. */
 #define KFILND_EP_KEY_BITS 16U
@@ -241,6 +243,12 @@ struct kfilnd_ep {
 #define KP_STATE_STALE 0x3
 /* We suspect this peer is actually down or otherwise unreachable */
 #define KP_STATE_DOWN 0x4
+/* We received a HELLO request from a new peer, and are waiting
+ * for the response to our HELLO request. We can handle RX events for
+ * such a peer, but we will throttle sends to this peer until it is
+ * up-to-date
+ */
+#define KP_STATE_WAIT_RSP 0x5
 
 struct kfilnd_peer {
 	struct rhash_head kp_node;
@@ -286,11 +294,12 @@ static inline bool kfilnd_peer_is_new_peer(struct kfilnd_peer *kp)
 	return atomic_read(&kp->kp_state) == KP_STATE_NEW;
 }
 
+/* We need to throttle messages if the peer is not up-to-date or stale */
 static inline bool kfilnd_peer_needs_throttle(struct kfilnd_peer *kp)
 {
 	unsigned int kp_state = atomic_read(&kp->kp_state);
 
-	return (kp_state == KP_STATE_NEW || kp_state == KP_STATE_DOWN);
+	return !(kp_state == KP_STATE_UPTODATE || kp_state == KP_STATE_STALE);
 }
 
 /* Peer needs hello if it is not up to date and there is not already a hello
