lnet/klnds/kfilnd/kfilnd_tn.c
@@ -846,6 +846,22 @@ static int kfilnd_tn_state_idle(struct kfilnd_transaction *tn,
 
 		switch (msg->type) {
 		case KFILND_MSG_HELLO_REQ:
+			if (CFS_FAIL_CHECK(CFS_KFI_REPLAY_RX_HELLO_REQ)) {
+				CDEBUG(D_NET, "Replay RX HELLO_REQ\n");
+				return -EAGAIN;
+			}
+
+			if (kfilnd_peer_is_new_peer(tn->tn_kp)) {
+				rc = kfilnd_send_hello_request(tn->tn_ep->end_dev,
+							       tn->tn_ep->end_cpt,
+							       tn->tn_kp);
+				if (rc)
+					KFILND_TN_ERROR(tn,
+							"Failed to send hello request: rc=%d",
+							rc);
+				rc = 0;
+			}
+
 			kfilnd_peer_process_hello(tn->tn_kp, msg);
 			tn->tn_target_addr = kfilnd_peer_get_kfi_addr(tn->tn_kp);
 			KFILND_TN_DEBUG(tn, "Using peer %s(%#llx)",
